debug: Adiciona ferramentas completas de debug para sincronização
- Adiciona script debug-sync.js com múltiplas funções de teste
- Função para testar requisições diretas à API
- Função para simular processo completo de seleção
- Logs detalhados em todas as etapas do processo
- Comandos para debug manual no console do navegador

--- a/index.html
+++ b/index.html
@@ -525,6 +525,7 @@
     <script src="js/clean-interface.js"></script>
     <script src="js/connect-facebook-api.js"></script>
     <script src="js/header-buttons.js"></script>
+    <script src="js/debug-sync.js"></script>
     <!-- <script src="js/quick-access.js"></script> -->
     <!-- <script src="js/clean-init.js"></script> -->
     <!-- <script src="js/emergency-button.js"></script> -->
